Styled brand name with fonts, color

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -31,3 +31,9 @@ h1, h2, h3, h4, h5, h6 {
   margin:0;
   padding:0;
 }
+
+.navbar-inverse .navbar-brand {
+  color: #1ABC9C;
+  font-family: "pacificoregular", sans-serif;
+  font-size: 28px;
+}
