--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -5,3 +5,7 @@
     <p><%= place.description %></p></br />
   </div>
 <% end %>
+<br class="clear" />
+<div class="text-center">
+  <%= will_paginate @posts, renderer: BootstrapPagination::Rails %>
+</div>
