--- a/app/views/places/edit.html.erb
+++ b/app/views/places/edit.html.erb
@@ -1,8 +1,12 @@
 <div class="booyah-box col-xs-10 col-xs-offset-1">
-  <h1>Edit <%= @place.name %> Details</h1>
+  <% if @place.name.present? %>
+    <h1>Edit <%= @place.name %> Details</h1>
+  <% else %>
+    <h1>Edit Place Details</h1>
+  <% end %>
   <br />
   <%= simple_form_for @place do |f| %>
-    <%= f.input :address %>
+    <%= f.input :name %>
     <br />
     <%= f.input :address %>
     <br />
