Added css to override bootstrap button border-radius

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -11,6 +11,11 @@ body {
 br.clear {
   clear: both;
 }
+
+.btn {
+  border-radius: 0px !important;
+}
+
 .booyah-box {
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
   -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
