--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -10,5 +10,6 @@
   <% end %>
   <div class="pull-right">
     <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-info' %>
+    <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this place?' }, class: 'btn btn-danger' %>
   </div>
 </div>
