--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -9,7 +9,9 @@
     <small>Added by: <%= @place.user.email %></small>
   <% end %>
   <div class="pull-right">
-    <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-info' %>
+    <% if current_user && current_user == @place.user %>
+      <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-info' %>
+    <% end %>
     <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this place?' }, class: 'btn btn-danger' %>
   </div>
 </div>
