--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -44,6 +44,13 @@ h1, h2, h3, h4, h5, h6 {
   padding:0;
 }
 
+.field_with_errors {
+  color: #ff3333;
+  background-color: #FFEEEE;
+  border: solid 1px #ff3333;
+  padding:8px;
+}
+
 .navbar-inverse .navbar-brand {
   color: #1ABC9C;
   font-family: "pacificoregular", sans-serif;
