Added google map to show view

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -28,6 +28,10 @@ br.clear {
   padding: 20px;
 }
 
+#map {
+  height: 300px;
+}
+
 .navbar.navbar-inverse {
   background: url('/assets/footer_lodyas.png');
   border-radius: 0px;
