--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -8,6 +8,33 @@
   <% if @place.user.present? %>
     <small>Added by: <%= @place.user.email %></small>
   <% end %>
+  <% if @place.latitude.present? && @place.longitude.present? %>
+    <br /><br />
+    <script>
+
+      function initMap() {
+        var myLatLng = {lat: <%= @place.latitude %>, lng: <%= @place.longitude %>};
+
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 13,
+          center: myLatLng
+        });
+
+        var marker = new google.maps.Marker({
+          position: myLatLng,
+          map: map,
+          title: 'Hello World!'
+        });
+      }
+    </script>
+
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBpdYH6MYNxbaIrV6Vky7_hIcGLlxphAvo&callback=initMap">
+    </script>
+
+    <div id="map"></div>
+  <% end %>
+  <br />
   <div class="pull-right">
     <% if current_user && current_user == @place.user %>
       <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-info' %>
