--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -42,3 +42,14 @@
     <% end %>
   </div>
 </div>
+<div class="booyah-box col-xs-10 col-xs-offset-1">
+  <h1>Comments</h1>
+  <br />
+  <%= simple_form_for @comment, url: '#' do |f| %>
+    <%= f.input :message %>
+    <br />
+    <%= f.input :rating %>
+    <br />
+    <%= f.submit 'Add a Comment', class: 'btn btn-primary' %>
+  <% end %>
+</div>
