--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -45,7 +45,7 @@
 <div class="booyah-box col-xs-10 col-xs-offset-1">
   <h1>Comments</h1>
   <br />
-  <%= simple_form_for @comment, url: '#' do |f| %>
+  <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
     <%= f.input :message %>
     <br />
     <%= f.input :rating %>
