--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -35,15 +35,27 @@
     <div id="map"></div>
   <% end %>
   <br />
-  <div class="pull-right">
-    <% if current_user && current_user == @place.user %>
+  <% if current_user && current_user == @place.user %>
+    <div class="pull-right">
       <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-info' %>
       <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this place?' }, class: 'btn btn-danger' %>
-    <% end %>
-  </div>
-</div>
-<div class="booyah-box col-xs-10 col-xs-offset-1">
-  <h1>Comments</h1>
+    </div>
+    <br /><br />
+  <% end %>
+  <hr class="clear" />
+<!--</div>
+<div class="booyah-box col-xs-10 col-xs-offset-1">-->
+  <h2>Reviews</h2>
+  <br />
+  <% @place.comments.each do |comment| %>
+      <blockquote>
+        <b><%= comment.rating %> / 5</b> -
+          <%= comment.message %>
+        <small><%= @place.user.email %></small>
+      </blockquote>
+  <% end %>
+  <hr />
+  <h3>Add a Review</h3>
   <br />
   <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
     <%= f.input :message %>
