--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -42,26 +42,28 @@
     </div>
     <br /><br />
   <% end %>
+
   <hr class="clear" />
-<!--</div>
-<div class="booyah-box col-xs-10 col-xs-offset-1">-->
+
   <h2>Reviews</h2>
   <br />
   <% @place.comments.each do |comment| %>
       <blockquote>
         <b><%= comment.rating %> / 5</b> -
-          <%= comment.message %>
+        <%= comment.message %>
         <small><%= @place.user.email %></small>
       </blockquote>
   <% end %>
-  <hr />
-  <h3>Add a Review</h3>
-  <br />
-  <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
-    <%= f.input :message %>
+  <% if current_user %>
+    <hr />
+    <h3>Add a Review</h3>
     <br />
-    <%= f.input :rating %>
-    <br />
-    <%= f.submit 'Add a Comment', class: 'btn btn-primary' %>
+    <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
+      <%= f.input :message %>
+      <br />
+      <%= f.input :rating %>
+      <br />
+      <%= f.submit 'Add a Comment', class: 'btn btn-primary' %>
+    <% end %>
   <% end %>
 </div>
