--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -49,7 +49,9 @@
   <br />
   <% @place.comments.each do |comment| %>
       <blockquote>
-        <b><%= comment.rating %> / 5</b> -
+        <% if comment.humanized_rating.present? %>
+          <b><%= comment.humanized_rating %></b> -
+        <% end %>
         <%= comment.message %>
         <small><%= @place.user.email %></small>
       </blockquote>
@@ -59,9 +61,9 @@
     <h3>Add a Review</h3>
     <br />
     <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
-      <%= f.input :message %>
+      <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
       <br />
-      <%= f.input :rating %>
+      <%= f.input :message %>
       <br />
       <%= f.submit 'Add a Comment', class: 'btn btn-primary' %>
     <% end %>
