--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -38,27 +38,15 @@
   <% if current_user && current_user == @place.user %>
     <div class="pull-right">
       <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-info' %>
-      <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this place?' }, class: 'btn btn-danger' %>
+      <%= link_to 'Delete', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this place?' }, class: 'btn btn-danger' %>
     </div>
-    <br /><br />
   <% end %>
-
-  <hr class="clear" />
-
-  <h2>Reviews</h2>
-  <br />
-  <% @place.comments.each do |comment| %>
-      <blockquote>
-        <% if comment.humanized_rating.present? %>
-          <b><%= comment.humanized_rating %></b> -
-        <% end %>
-        <%= comment.message %>
-        <small><%= @place.user.email %></small>
-      </blockquote>
-  <% end %>
+</div>
+<div class="booyah-box col-xs-10 col-xs-offset-1">
+  <h2 class="pull-left">Reviews</h2>
   <% if current_user %>
     <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+    <button type="button" class="btn btn-primary pull-right" data-toggle="modal" data-target="#myModal">
       Add a Review
     </button>
 
@@ -83,6 +71,19 @@
           <% end %>
         </div>
       </div>
+    </div>
+  <% end %>
+  <br class="clear" />
+  <hr />
+  <% @place.comments.each do |comment| %>
+    <div class="col-xs-12 col-sm-6">
+      <blockquote>
+        <% if comment.humanized_rating.present? %>
+          <b><%= comment.humanized_rating %></b> -
+        <% end %>
+        <%= comment.message %>
+        <small><%= @place.user.email %></small>
+      </blockquote>
     </div>
   <% end %>
 </div>
