--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -2,9 +2,17 @@
   <div class="booyah-box col-xs-10 col-xs-offset-1">
     <h1><%= link_to place.name, place_path(place) %></h1><br />
     <i><%= place.address %></i><br /><br />
-    <p><%= place.description %></p></br />
-    <% if place.user.present? %>
-      <small>Added by: <%= place.user.email %></small>
+    <p><%= place.description %></p>
+    <% if place.comments.present? %>
+      <div class="col-xs-12">
+        <blockquote>
+          <% if place.comments.last.humanized_rating.present? %>
+            <b><%= place.comments.last.humanized_rating %></b> -
+          <% end %>
+          <%= place.comments.last.message %>
+          <small><%= place.user.email %></small>
+        </blockquote>
+      </div>
     <% end %>
   </div>
 <% end %>
