Fixed comment display

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -121,7 +121,7 @@
             <b><%= comment.humanized_rating %></b> -
           <% end %>
           <%= comment.message %>
-          <small><%= @place.user.email %></small>
+          <small><%= comment.user.email %></small>
         </blockquote>
       </div>
     <% end %>
