--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -10,7 +10,7 @@
             <b><%= place.comments.last.humanized_rating %></b> -
           <% end %>
           <%= place.comments.last.message %>
-          <small><%= place.user.email %></small>
+          <small><%= place.comments.last.user.email %></small>
         </blockquote>
       </div>
     <% end %>
