--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,11 +43,20 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-<% if notice.present? %>
+<!--<% if notice.present? %>
   <p class="alert alert-info"><%= notice %></p>
 <% end %>
 <% if alert.present? %>
   <p class="alert alert-danger"><%= alert %></p>
+<% end %>-->
+
+<% unless flash.blank? %>
+   <% flash.each do |type, message| %>
+      <div class="col-xs-10 col-xs-offset-1 alert <%= flash_class(type.to_s) %> alert-dismissable" role="alert">
+         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <%= message %>
+      </div>
+   <% end %>
 <% end %>
 
 <%= yield %>
