--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,3 +1,15 @@
+<%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
+  <% if @comment.errors.any? %>
+    <div id="error_explanation" class="alert alert-error">
+      <h2><%= pluralize(@comment.errors.count, "error") %> prevented this review from being saved:</h2>
+      <ul>
+      <% @comment.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+<% end %>
 <div class="booyah-box col-xs-10 col-xs-offset-1">
   <h1><%= @place.name %></h1>
   <br />
@@ -57,9 +69,9 @@
           </div>
           <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
             <div class="modal-body">
-              <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
+              <%= f.input :rating, as: :select, collection: Comment::RATINGS, error: false %>
               <br />
-              <%= f.input :message %>
+              <%= f.input :message, error: false %>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
