--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -42,6 +42,10 @@ br.clear {
   border-radius: 0px !important;
 }
 
+.index-row div{
+  margin: 10px 0;
+}
+
 //Text styles
 h1, h2, h3, h4, h5, h6 {
   margin:0;
@@ -69,11 +73,27 @@ h1, h2, h3, h4, h5, h6 {
 blockquote {
   background: #f9f9f9;
   border-left: 10px solid #ccc;
-  margin: 1.5em 10px;
-  padding: 0.5em 10px;
+  margin: 10px;
+  padding: 10px;
   quotes: "\201C""\201D""\2018""\2019";
 }
 
 blockquote p {
   display: inline;
+}
+
+//Image styles
+
+.thumbnail {
+  border: 0;
+  border-radius: 0;
+  padding: 0;
+}
+
+.modal-photo {
+  max-width: 100%;
+}
+
+.index-photo {
+  margin: 0;
 }
