--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,17 +1,32 @@
 <% @places.each do |place| %>
   <div class="booyah-box col-xs-10 col-xs-offset-1">
-    <h1><%= link_to place.name, place_path(place) %></h1><br />
-    <i><%= place.address %></i><br /><br />
-    <p><%= place.description %></p>
+    <div class="row index-row">
+      <% if place.photos.present? %>
+        <div class="col-xs-12 col-sm-7 col-md-8 col-lg-9">
+      <% else %>
+        <div class="col-xs-12">
+      <% end %>
+          <h1><%= link_to place.name, place_path(place) %></h1><br />
+          <i><%= place.address %></i><br /><br />
+          <p><%= place.description %></p>
+        </div>
+        <% if place.photos.present? %>
+          <div class="col-xs-12 col-sm-5 col-md-4 col-lg-3">
+            <%= link_to image_tag(place.photos.last.picture), place_path(place), class: "thumbnail index-photo" %>
+          </div>
+        <% end %>
+    </div>
     <% if place.comments.present? %>
-      <div class="col-xs-12">
-        <blockquote>
-          <% if place.comments.last.humanized_rating.present? %>
-            <b><%= place.comments.last.humanized_rating %></b> -
-          <% end %>
-          <%= place.comments.last.message %>
-          <small><%= place.comments.last.user.email %></small>
-        </blockquote>
+      <div class="row">
+        <div class="col-xs-12">
+          <blockquote>
+            <% if place.comments.last.humanized_rating.present? %>
+              <b><%= place.comments.last.humanized_rating %></b> -
+            <% end %>
+            <%= place.comments.last.message %>
+            <small><%= place.comments.last.user.email %></small>
+          </blockquote>
+        </div>
       </div>
     <% end %>
   </div>
