--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -54,7 +54,7 @@
 <div class="booyah-box col-xs-10 col-xs-offset-1">
   <h2 class="pull-left">Photos</h2>
   <% if current_user %>
-  
+
     <!-- Button trigger modal -->
     <button type="button" class="btn btn-info pull-right" data-toggle="modal" data-target="#photoModal">
       Add a Photo
@@ -90,40 +90,51 @@
   <br class="clear" />
   <hr />
 
-  <div class="row">
-    <% @place.photos.each do |photo| %>
-      <div class="col-xs-12 col-sm-6 col-md-3">
+  <% if @place.photos.count > 0 %>
+    <div class="row">
+      <% @place.photos.each do |photo| %>
+        <div class="col-xs-12 col-sm-6 col-md-3">
 
-        <!-- Button trigger modal -->
-        <div class="thumbnail">
-          <a data-toggle="modal" href="#photoModal<%= photo.id %>">
-            <%= image_tag photo.picture %>
-          </a>
-          <div class="caption">
-            <h5 class="text-center"><%= photo.caption %></h5>
+          <!-- Button trigger modal -->
+          <div class="thumbnail">
+            <a data-toggle="modal" href="#photoModal<%= photo.id %>">
+              <%= image_tag photo.picture %>
+            </a>
+            <div class="caption">
+              <h5 class="text-center"><%= photo.caption %></h5>
+            </div>
           </div>
-        </div>
 
-        <!-- Modal -->
-        <div class="modal fade" id="photoModal<%= photo.id %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-          <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="photoModalLabel<%= photo.id %>"><%= photo.caption %></h4>
-              </div>
-              <div class="modal-body">
-                <%= image_tag photo.picture, class:'modal-photo' %>
-                <br /><br />
-                <p>Photo added by <%= photo.user.email %></p>
+          <!-- Modal -->
+          <div class="modal fade" id="photoModal<%= photo.id %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog modal-lg" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="photoModalLabel<%= photo.id %>"><%= photo.caption %></h4>
+                </div>
+                <div class="modal-body">
+                  <%= image_tag photo.picture, class:'modal-photo' %>
+                  <br /><br />
+                  <p>Photo added by <%= photo.user.email %></p>
+                </div>
               </div>
             </div>
           </div>
-        </div>
 
-      </div>
-    <% end %>
-  </div>
+        </div>
+      <% end %>
+    </div>
+  <% else %>
+    <p>
+      No one has added a photo for this place yet!
+      <% if user_signed_in? %>
+      <a href="#reviewModal" data-toggle="modal">Add your own photo.</a>
+      <% else %>
+        <%= link_to 'Sign in', new_user_session_path %> and add your own photo.
+      <% end %>
+    </p>
+  <% end %>
 </div>
 
 <div class="booyah-box col-xs-10 col-xs-offset-1">
