--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -12,7 +12,7 @@
         </div>
         <% if place.photos.present? %>
           <div class="col-xs-12 col-sm-5 col-md-4 col-lg-3">
-            <%= link_to image_tag(place.photos.last.picture), place_path(place), class: "thumbnail index-photo" %>
+            <%= link_to image_tag(place.photos.last.picture), place_path(place), class: "thumbnail index-photo pull-right" %>
           </div>
         <% end %>
     </div>
