Added image resize/crop to create thumbnails, added thumbnails to index and show gallery, adjusted index view

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -90,9 +90,9 @@ blockquote p {
   padding: 0;
 }
 
-  .thumbnail img {
+  /*.thumbnail img {
     max-height: 200px;
-  }
+  }*/
 
 .modal-photo {
   max-width: 100%;
