--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -2,6 +2,11 @@
   <div class="booyah-box col-xs-10 col-xs-offset-1">
     <div class="row index-row">
       <% if place.photos.present? %>
+        <div class="col-xs-12 col-sm-5 col-md-4 col-lg-3">
+          <a href="<%= place_path(place) %>">
+            <%= image_tag place.photos.first.picture_url(:thumb), class: "thumbnail index-photo img-responsive" %>
+          </a>
+        </div>
         <div class="col-xs-12 col-sm-7 col-md-8 col-lg-9">
       <% else %>
         <div class="col-xs-12">
@@ -9,26 +14,17 @@
           <h1><%= link_to place.name, place_path(place) %></h1><br />
           <i><%= place.address %></i><br /><br />
           <p><%= place.description %></p>
+          <% if place.comments.present? %>
+                <blockquote>
+                  <% if place.comments.last.humanized_rating.present? %>
+                    <b><%= place.comments.last.humanized_rating %></b> -
+                  <% end %>
+                  <%= place.comments.last.message %>
+                  <small><%= place.comments.last.user.email %></small>
+                </blockquote>
+          <% end %>
         </div>
-        <% if place.photos.present? %>
-          <div class="col-xs-12 col-sm-5 col-md-4 col-lg-3">
-            <%= link_to image_tag(place.photos.last.picture), place_path(place), class: "thumbnail index-photo pull-right" %>
-          </div>
-        <% end %>
     </div>
-    <% if place.comments.present? %>
-      <div class="row">
-        <div class="col-xs-12">
-          <blockquote>
-            <% if place.comments.last.humanized_rating.present? %>
-              <b><%= place.comments.last.humanized_rating %></b> -
-            <% end %>
-            <%= place.comments.last.message %>
-            <small><%= place.comments.last.user.email %></small>
-          </blockquote>
-        </div>
-      </div>
-    <% end %>
   </div>
 <% end %>
 <br class="clear" />
