Fixed syntax error in photos controller, centered modal photo in place view

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -114,7 +114,7 @@
                   <h4 class="modal-title" id="photoModalLabel<%= photo.id %>"><%= photo.caption %></h4>
                 </div>
                 <div class="modal-body">
-                  <%= image_tag photo.picture, class:'modal-photo' %>
+                  <%= image_tag photo.picture, class:'modal-photo center-block' %>
                   <br /><br />
                   <p>Photo added by <%= photo.user.email %></p>
                 </div>
