--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -73,9 +73,18 @@ h1, h2, h3, h4, h5, h6 {
 blockquote {
   background: #f9f9f9;
   border-left: 10px solid #ccc;
-  margin: 10px;
+  margin: 20px 10px;
   padding: 10px;
-  quotes: "\201C""\201D""\2018""\2019";
+  quotes: "\201C""\201D";
+}
+
+blockquote:before {
+  color: #ccc;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.1em;
+  vertical-align: -0.4em;
 }
 
 blockquote p {
