--- a/app/views/notification_mailer/comment_added.text.erb
+++ b/app/views/notification_mailer/comment_added.text.erb
@@ -1,6 +1,8 @@
 Hi there!
 
-Someone has added a comment to your place on Nomster.
+Someone has added a comment to your place, <%= @place.name %> on Nomster. Check it out at the url below:
+
+<%= place_url(@place) %>
 
 Cheers,
 Brent
