--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -180,8 +180,13 @@
     <% @place.comments.each do |comment| %>
       <div class="col-xs-12 col-sm-6">
         <blockquote>
-          <% if comment.humanized_rating.present? %>
-            <b><%= comment.humanized_rating %></b> -
+          <% if comment.rating.present? %>
+            <% comment.rating.chr.to_i.times do %>
+              <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+            <% end %>
+            <% (5 - comment.rating.chr.to_i).times do %>
+              <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>
+            <% end %> -
           <% end %>
           <%= comment.message %>
           <small><%= comment.user.email %></small>
