--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -22,7 +22,8 @@
                     <% end %>
                     <% (5 - place.comments.last.rating.chr.to_i).times do %>
                       <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>
-                    <% end %> -
+                    <% end %>
+                    <br />
                   <% end %>
                   <%= place.comments.last.message %>
                   <small><%= place.comments.last.user.email %></small>
