--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -186,7 +186,8 @@
             <% end %>
             <% (5 - comment.rating.chr.to_i).times do %>
               <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>
-            <% end %> -
+            <% end %>
+            <br />
           <% end %>
           <%= comment.message %>
           <small><%= comment.user.email %></small>
