--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,39 +1,46 @@
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+<div id="nomster-carousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#nomster-carousel" data-slide-to="0" class="active"></li>
+    <li data-target="#nomster-carousel" data-slide-to="1"></li>
+    <li data-target="#nomster-carousel" data-slide-to="2"></li>
+    <li data-target="#nomster-carousel" data-slide-to="3"></li>
   </ol>
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <%= image_tag 'slider1.jpg' %>
+      <%= image_tag 'slider1.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
-        Find the best food after a long day on the beach.
+        Find the best food after a relaxing day at the beach.
       </div>
     </div>
     <div class="item">
-      <%= image_tag 'slider2.jpg' %>
+      <%= image_tag 'slider2.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
         Have a great meal, then take in a movie at the historic Alameda Theatre.
       </div>
     </div>
     <div class="item">
-      <%= image_tag 'slider3.jpg' %>
+      <%= image_tag 'slider3.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
-        Spend a fortune on a silly house on the water, then eat somewhere, I guess.
+        Spend a fortune on a silly house on the bay, then eat somewhere, I guess.
+      </div>
+    </div>
+    <div class="item">
+      <%= image_tag 'slider4.jpg', class: 'img-responsive' %>
+      <div class="carousel-caption">
+        Tour the USS Hornet and then eat. Or vice versa. Whatever.
       </div>
     </div>
   </div>
 
   <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+  <a class="left carousel-control" href="#nomster-carousel" role="button" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+  <a class="right carousel-control" href="#nomster-carousel" role="button" data-slide="next">
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
