--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -90,7 +90,8 @@ blockquote {
 
 .carousel-caption {
   //font-family: 'Helvetica Neue', Helvetica, sans-serif;
-  font-size: 40px;
+  //font-size: 40px;
+  font-size: 3vw;
   font-weight: 100;
   background: rgba(0,0,0,0.5);
   text-shadow: rgba(0,0,0,0.95) 2px 3px;
