Adjusted carousel font styling again

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -89,15 +89,15 @@ blockquote {
   }
 
 .carousel-caption {
-  //font-family: 'Helvetica Neue', Helvetica, sans-serif;
-  //font-size: 40px;
-  font-size: 3vw;
+  font-size: 2.75vw;
   font-weight: 100;
   background: rgba(0,0,0,0.5);
   text-shadow: rgba(0,0,0,0.95) 2px 3px;
   width: 100%;
   position: absolute;
   left: 0;
+  padding-left: 1em;
+  padding-right: 1em;
 }
 
 .field_with_errors {
