--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,10 +33,11 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to 'Create Account', new_user_registration_path %></li>
         <% if user_signed_in? %>
+          <li><%= link_to 'My Account', user_path(current_user) %></li>
           <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
         <% else %>
+          <li><%= link_to 'Create Account', new_user_registration_path %></li>
           <li><%= link_to 'Sign In', new_user_session_path %></li>
         <% end %>
       </ul>
