--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,15 @@
 <div class="booyah-box col-xs-10 col-xs-offset-1">
-  <h1>User Profile for <%= @user.email %></h1>
-  <hr />
-  <h3>Member since <%= @user.created_at.strftime("%B %d, %Y") %></h3>
-  <h4><%= @user.comments.count %> reviews</h4>
-  <h4><%= @user.comments.where(rating: '5_stars').count %> five-star reviews</h4>
+  <div class="row item-row">
+    <div class="col-xs-12 col-sm-5 col-md-4 col-lg-3">
+      <%= image_tag 'user.png', class: 'img-responsive' %>
+    </div>
+    <div class="col-xs-12 col-sm-7 col-md-8 col-lg-9">
+      <h2 class="email-heading"><%= @user.email %></h2>
+      <br />
+      <h3>Member since <%= @user.created_at.strftime("%B %d, %Y") %></h3>
+      <br />
+      <h4><%= @user.comments.count %> reviews</h4>
+      <h4><%= @user.comments.where(rating: '5_stars').count %> five-star reviews</h4>
+    </div>
+  </div>
 </div>
