--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,10 +6,36 @@
     <div class="col-xs-12 col-sm-7 col-md-8 col-lg-9">
       <h2 class="email-heading"><%= @user.email %></h2>
       <br />
-      <h3>Member since <%= @user.created_at.strftime("%B %d, %Y") %></h3>
+      <h4>Member since <%= @user.created_at.strftime("%B %d, %Y") %></h4>
       <br />
-      <h4><%= @user.comments.count %> reviews</h4>
-      <h4><%= @user.comments.where(rating: '5_stars').count %> five-star reviews</h4>
+      <h4><%= @user.comments.count %> review(s)</h4>
+      <h4><%= @user.comments.where(rating: '5_stars').count %> five-star review(s)</h4>
     </div>
   </div>
+</div>
+<div class="booyah-box col-xs-10 col-xs-offset-1">
+  <h2 class="pull-left">Reviews</h2>
+
+  <br class="clear" />
+  <hr />
+
+  <% if @user.comments.present? %>
+    <% @user.comments.each do |comment| %>
+      <div class="col-xs-12 col-sm-6">
+        <h4><%= link_to comment.place.name, place_path(comment.place) %>:</h4>
+        <blockquote>
+          <% if comment.rating.present? %>
+            <% comment.rating.chr.to_i.times do %>
+              <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+            <% end %>
+            <% (5 - comment.rating.chr.to_i).times do %>
+              <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>
+            <% end %>
+            <br />
+          <% end %>
+          <%= comment.message %>
+        </blockquote>
+      </div>
+    <% end %>
+  <% end %>
 </div>
