--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -31,6 +31,7 @@ br.clear {
 
 .carousel {
   box-shadow: 0px 2px 6px #777;
+  margin-bottom: 15px;
 }
   .carousel-inner > .item > img,
   .carousel-inner > .item > a > img {
