--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,20 +1,23 @@
-<div class="booyah-box col-xs-10 col-xs-offset-1"
-  <h2>Edit <%= resource_name.to_s.humanize %></h2>
-  <br />
+<div class="booyah-box col-xs-10 col-xs-offset-1">
+  <h1>Edit <%= resource_name.to_s.humanize %> Account</h1>
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= f.error_notification %>
     <br />
     <div class="form-inputs">
       <%= f.input :email, required: true, autofocus: true %>
-      <br />
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-        <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
         <br />
+        <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
       <% end %>
       <br />
       <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
       <br />
       <%= f.input :password_confirmation, required: false %>
+      <br />
+      <%= f.label "Current Avatar" %>
+      <%= image_tag current_user.avatar_url(:_small_thumb), class: 'img-responsive' %>
+      <br />
+      <%= f.input :avatar, label: 'Upload new avatar', required: false %>
       <br />
       <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
     </div>
@@ -28,5 +31,5 @@
   <br />
   <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
   <br />
-  <%= link_to "Back", :back %>
+  <%= link_to "Back", :back, class: "btn btn-default" %>
 </div>
