--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
   <p class="alert alert-danger"><%= alert %></p>
 <% end %>-->
 
-<% unless flash.blank? %>
+<% unless flash.blank? || move_flash_messages? %>
    <% flash.each do |type, message| %>
       <div class="col-xs-10 col-xs-offset-1 alert <%= flash_class(type.to_s) %> alert-dismissable" role="alert">
          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
