--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -190,7 +190,7 @@
             <br />
           <% end %>
           <%= comment.message %>
-          <small><%= comment.user.email %></small>
+          <small><%= link_to comment.user.email, user_path(comment.user) %></small>
         </blockquote>
       </div>
     <% end %>
