--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,11 @@
 <div class="booyah-box col-xs-10 col-xs-offset-1">
   <div class="row item-row">
     <div class="col-xs-12 col-sm-5 col-md-4 col-lg-3">
-      <%= image_tag 'user.png', class: 'img-responsive' %>
+      <% if @user.avatar.present? %>
+        <%= image_tag @user.avatar_url(:thumb), class: 'img-responsive' %>
+      <% else %>
+        <%= image_tag 'user.png', class: 'img-responsive' %>
+      <% end %>
     </div>
     <div class="col-xs-12 col-sm-7 col-md-8 col-lg-9">
       <h2 class="email-heading"><%= @user.email %></h2>
@@ -10,6 +14,10 @@
       <br />
       <h4><%= @user.comments.count %> review(s)</h4>
       <h4><%= @user.comments.where(rating: '5_stars').count %> five-star review(s)</h4>
+      <br />
+      <% if current_user && current_user == @user %>
+        <%= link_to 'Edit Account Details', edit_user_registration_path(@user), class: 'btn btn-info' %>
+      <% end %>
     </div>
   </div>
 </div>
