--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -31,6 +31,7 @@ br.clear {
 
 .carousel {
   box-shadow: 0px 2px 6px #777;
+  margin-top: -20px;
   margin-bottom: 15px;
 }
   .carousel-inner > .item > img,
@@ -48,9 +49,8 @@ br.clear {
 }
 
 .navbar {
-  margin-bottom: 0px;
   border-radius: 0px;
-  //box-shadow: 0px 2px 4px #777;
+  box-shadow: 0px 2px 4px #777;
 }
 
   .navbar.navbar-inverse {
