Fixed image position on index and user pages

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -142,8 +142,9 @@ h1, h2, h3, h4, h5, h6 {
 
 //Image styles
 
-.index-photo {
+.list-photo {
   margin: 0;
+  padding: 0 10px;
 }
 
 .modal-photo {
@@ -153,5 +154,5 @@ h1, h2, h3, h4, h5, h6 {
 .thumbnail {
   border: 0;
   border-radius: 0;
-  padding: 0;
+  padding-bottom: 0;
 }
